--- a/moss-bungeecord/build.gradle
+++ b/moss-bungeecord/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 def id = 'moss-bungeecord'
 def domain = 'games.negative.moss'
-def apiVersion = '1.0.0'
+def apiVersion = '1.0.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
