Switch to Shadow plugin for fat jar publishing
Added the com.gradleup.shadow plugin to moss-bungeecord, moss-paper, and moss-velocity build scripts. Disabled the default jar task and configured shadowJar to produce the main artifact for publishing, ensuring dependencies are bundled in the published jars.

--- a/moss-paper/build.gradle
+++ b/moss-paper/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'maven-publish'
+    id 'com.gradleup.shadow' version '9.2.2'
 }
 
 def id = 'moss-paper'
@@ -47,10 +48,22 @@ tasks.withType(JavaCompile).configureEach {
     }
 }
 
+tasks.jar {
+    enabled = false
+}
+
+tasks.shadowJar {
+    archiveBaseName.set(id)
+    archiveVersion.set(apiVersion)
+    archiveClassifier.set("")
+}
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            from components.java
+            artifact(tasks.shadowJar) {
+                builtBy tasks.shadowJar
+            }
 
             // Explicit coordinates (optional, defaults to project.group/name/version)
             groupId = "${domain}"
