Add Velocity example plugin with Moss integration
Introduces a new example Velocity plugin demonstrating integration with MossVelocity and Spring. Includes plugin source code, build configuration, resource files, images for documentation, and updates settings.gradle to include the new module.

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,4 @@ include 'moss-paper'
 include 'moss-bungeecord'
 include 'moss-velocity'
 include 'example-plugins:paper-plugin'
+include 'example-plugins:velocity-plugin'
