Add BungeeCord plugin example project
Introduces a new example plugin for BungeeCord, including Gradle build configuration, plugin source code, listener implementation, resource files, and documentation with images. Also updates settings.gradle to include the new subproject and removes unused resource processing from the Velocity plugin build script.

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,4 @@ include 'moss-bungeecord'
 include 'moss-velocity'
 include 'example-plugins:paper-plugin'
 include 'example-plugins:velocity-plugin'
+include 'example-plugins:bungeecord-plugin'
