--- a/example-plugins/bungeecord-plugin/build.gradle
+++ b/example-plugins/bungeecord-plugin/build.gradle
@@ -11,8 +11,11 @@ repositories {
     mavenCentral()
 
     maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
+        url = uri("https://oss.sonatype.org/content/repositories/snapshots")
+    }
+
+    maven {
+        url = uri("https://libraries.minecraft.net")
     }
 
     maven {
@@ -22,13 +25,13 @@ repositories {
 }
 
 dependencies {
-    compileOnly("com.velocitypowered:velocity-api:3.4.0-SNAPSHOT")
+    compileOnly("net.md-5:bungeecord-api:1.20-R0.2")
 
     // IMPORTANT: We need to compile Spring Context for this to work!
     implementation("org.springframework:spring-context:6.2.13")
 
-    // Moss (Velocity Platform)
-    implementation("games.negative.moss:moss-velocity:1.0.1-SNAPSHOT")
+    // Moss (Bungeecord Platform)
+    implementation("games.negative.moss:moss-bungeecord:1.0.1-SNAPSHOT")
 }
 
 def targetJavaVersion = 21
