--- a/moss/build.gradle
+++ b/moss/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 def id = 'moss-common'
 def domain = 'games.negative.moss'
-def apiVersion = '1.0.0-SNAPSHOT'
+def apiVersion = '1.0.0'
 
 repositories {
     mavenCentral()
