--- a/moss-paper/build.gradle
+++ b/moss-paper/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 def id = 'moss-paper'
 def domain = 'games.negative.moss'
-def apiVersion = '1.2.0-SNAPSHOT'
+def apiVersion = '1.2.1'
 
 repositories {
     mavenCentral()
